Adjustment to allow sending Base64 attachments, not just plain text and fix html preview on message list (#28)
* Adjustment to allow sending Base64 attachments, not just plain text and Added a few parameters to README.md

* A bug that prevented the preview of email bodies in HTML from being displayed in the message list has been fixed

--- a/lib/phoenix_00_web/live/message_live/show.html.heex
+++ b/lib/phoenix_00_web/live/message_live/show.html.heex
@@ -41,7 +41,7 @@
       title="Inline Frame Example"
       width="100%"
       style="min-height: 600px;"
-      srcdoc={raw(@message.email.body)}
+      srcdoc={@message.email.body}
     >
     </iframe>
   </div>
